# irap-vietnam-360

./: .gitignore  ARCHITECTURE.md  README.md  cuts.txt  example_sql_coordinate_processing.py  fisheye_utils.py  generate_image_dataset.py  pyproject.toml  requirements.txt  setup.py  test_cuts_analysis.py  test_webgis_cuts.txt
.claude/: settings.local.json
.devdocs/: context.md
irap_video_cutting/gpx/: __main__.py  cut_manual.py  cut_manual_gui.py  gpx_cut.py  gpx_io.py  pipeline.py  video_meta.py
irap_video_cutting/shared/: cli_runner.py  cut_gui.py  ffmpeg_cut.py  manual_cuts.py  models.py  stem_index.py  video_keyframes.py
irap_video_cutting/webgis/: __main__.py  cut_webgis.py  cut_webgis_gui.py  pipeline.py  webgis_cut.py  webgis_io.py
irap_vietnam_360/: README.md  data.py  fisheye_utils.py  generate_image_dataset.py  gps_utils.py  gpx_utils.py  insta_metadata.py  stabilization.py
irap_vietnam_360/coordinates/: __init__.py  conventions.py  enu.py  spherical.py
irap_vietnam_360/insta360/: __init__.py  data.py  metadata.py  stabilization.py
video-gpx-cutting/: README.md  cut_manual.py  cut_manual_gui.py  ffmpeg_cut.py  gpx_cut.py  gpx_io.py  manual_cuts.py  models.py  video_keyframes.py  video_meta.py
