[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "irap-vietnam-360"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
video360 = [
    "av>=10.0.0",
    "opencv-python",
    "scipy",
    "telemetry-parser",
]

[project.scripts]
cut-manual     = "irap_video_cutting.gpx.cut_manual:main"
cut-manual-gui = "irap_video_cutting.gpx.cut_manual_gui:main"
cut-webgis     = "irap_video_cutting.webgis.cut_webgis:main"
cut-webgis-gui = "irap_video_cutting.webgis.cut_webgis_gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["irap_video_cutting*", "irap_vietnam_360*"]
